SYNCHRONIZE   ... with changes by Simon and Robi made on branch observers. MODIFY   Waters APIs now use generics, covariants and other Java 1.5 features   throughout. MODIFY   New interface structure. Classes in net.sourceforge.waters.model.* have   become interfaces, with two diferent implementations. ADD   The plain implementation in net.sourceforge.waters.plain.* supports   read-only access to module contents. ADD   The subject implementation in net.sourceforge.waters.subject.* supports   read/write access to module contents, and provides the ability to   register observers to receive change notifications.