@@ -1,12 +1,33 @@
+//# -*- tab-width: 4  indent-tabs-mode: t  c-basic-offset: 4 -*-
+//###########################################################################
+//# PROJECT: Waters/Supremica IDE
+//# PACKAGE: org.supremica.gui.ide
+//# CLASS:   ModuleContainers
+//###########################################################################
+//# $Id: ModuleContainers.java,v 1.4 2005-11-03 01:24:16 robi Exp $
+//###########################################################################
+
+
 package org.supremica.gui.ide;
 
-import java.util.*;
-import net.sourceforge.waters.model.module.ModuleProxy;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Iterator;
+import java.util.LinkedList;
+import java.util.List;
+
+import net.sourceforge.waters.model.base.Proxy;
+import net.sourceforge.waters.model.module.AliasProxy;
+import net.sourceforge.waters.model.module.EventDeclProxy;
+import net.sourceforge.waters.model.module.ParameterProxy;
+import net.sourceforge.waters.subject.module.ModuleSubject;
+
 
 public class ModuleContainers
 {
 	private IDE ide;
-	private LinkedList moduleContainers = new LinkedList();
+	private List<ModuleContainer> moduleContainers =
+		new LinkedList<ModuleContainer>();
 	private ModuleContainer activeModuleContainer = null;
 
 	private int newModuleCounter = 1;
@@ -16,13 +37,10 @@ public class ModuleContainers
 		this.ide = ide;
 	}
 
-	public ModuleContainer getModuleContainer(String name)
+	public ModuleContainer getModuleContainer(final String name)
 	{
-		for(Iterator modIt = moduleContainers.iterator(); modIt.hasNext(); )
-		{
-			ModuleContainer currModuleContainer = (ModuleContainer)modIt.next();
-			if (name.equals(currModuleContainer.getName()))
-			{
+		for (final ModuleContainer currModuleContainer : moduleContainers) {
+			if (name.equals(currModuleContainer.getName()))	{
 				return currModuleContainer;
 			}
 		}
@@ -31,7 +49,7 @@ public class ModuleContainers
 
 	public void add(ModuleContainer moduleContainer)
 	{
-		moduleContainers.addLast(moduleContainer);
+		moduleContainers.add(moduleContainer);
 	}
 
 	public void remove(ModuleContainer moduleContainer)
@@ -43,6 +61,7 @@ public class ModuleContainers
 		}
 	}
 
+
 	void setActive(ModuleContainer moduleContainer)
 	{
 
@@ -53,20 +72,25 @@ public class ModuleContainers
 		ide.setTitle(ide.getName() + " [" + moduleContainer.getName() + "]");
 	}
 
+
 	public ModuleContainer getActiveModuleContainer()
 	{
 		return activeModuleContainer;
 	}
 
+
 	public ModuleContainer getFirst()
 	{
-		return (ModuleContainer)moduleContainers.getFirst();
+		return (ModuleContainer) moduleContainers.get(0);
 	}
+
 
 	public ModuleContainer getLast()
 	{
-		return (ModuleContainer)moduleContainers.getLast();
+		final int index = moduleContainers.size() - 1;
+		return (ModuleContainer) moduleContainers.get(index);
 	}
+
 
 	public ModuleContainer getNext(ModuleContainer moduleContainer)
 	{
@@ -83,12 +107,14 @@ public class ModuleContainers
 		return null;
 	}
 
+
 	public int size()
 	{
 		return moduleContainers.size();
 	}
 
-	public Iterator iterator()
+
+	public Iterator<ModuleContainer> iterator()
 	{
 		return moduleContainers.iterator();
 	}
@@ -105,10 +131,18 @@ public class ModuleContainers
 
 	}
 
+
 	public ModuleContainer createNewModuleContainer()
 	{
-		ModuleProxy newModule = new ModuleProxy(getNewModuleName("Module"));
-		ModuleContainer newModuleContainer = new ModuleContainer(ide, newModule);
+		final String name = getNewModuleName("Module");
+		final Collection<ParameterProxy> pl = Collections.emptyList();
+		final Collection<AliasProxy> al = Collections.emptyList();
+		final Collection<EventDeclProxy> el = Collections.emptyList();
+		final Collection<Proxy> prl = Collections.emptyList();
+		final ModuleSubject newModule =
+			new ModuleSubject(name, null, pl, al, el, prl, prl);
+		final ModuleContainer newModuleContainer =
+			new ModuleContainer(ide, newModule);
 		return newModuleContainer;
 	}
 
